tests/baselines/reference/parserSetAccessorWithTypeAnnotation1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserSetAccessorWithTypeAnnotation1.ts(2,8): error TS1095: A 'set' accessor cannot have a return type annotation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserSetAccessorWithTypeAnnotation1.ts (1 errors) ====
    class C {
       set foo(v): number {
           ~~~
!!! error TS1095: A 'set' accessor cannot have a return type annotation.
       }
    }